# ESE519-FinalProj

./: README.md  draft.c  servo.c  submission.md
Codes/: CMakeLists.txt  DCmotor.c  adps.c  adps.h  main.c  project.c  servo.c  servo.h  servoMotor.c  sound.c  sound.h
